--- a/wishlist.html
+++ b/wishlist.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
 	<title>Wish List</title>
@@ -12,7 +13,9 @@
 	<header>
 		<ul>
 			<li><a href="index.html"> Add more wishes</a></li>
-			<li><h1>List of Wishes</h1></li>
+			<li>
+				<h1>List of Wishes</h1>
+			</li>
 			<li><a href="result.html">Your Gift </a></li>
 		</ul>
 	</header>
@@ -33,14 +36,17 @@
 		<ul>
 			<li class="twitter">
 				Twitter:
-				<a href="https://twitter.com/NodeGirlsSydney" target="_blank" rel="noopener noreferrer">@NodeGirlsSydney</a>
+				<a href="https://twitter.com/NodeGirlsSydney" target="_blank"
+					rel="noopener noreferrer">@NodeGirlsSydney</a>
 				<a href="https://twitter.com/NodeGirlsMelb" target="_blank" rel="noopener noreferrer">@NodeGirlsMelb</a>
 				<a href="https://twitter.com/NodeGirlsBri" target="_blank" rel="noopener noreferrer">@NodeGirlsBri</a>
-				<a href="https://twitter.com/NodeGirlsPerth" target="_blank" rel="noopener noreferrer">@NodeGirlsPerth</a>
+				<a href="https://twitter.com/NodeGirlsPerth" target="_blank"
+					rel="noopener noreferrer">@NodeGirlsPerth</a>
 			</li>
 			<li class="facebook">
 				Facebook:
-				<a href="https://www.facebook.com/NodeGirlsAustralia" target="_blank" rel="noopener noreferrer">NodeGirlsAustralia</a>
+				<a href="https://www.facebook.com/NodeGirlsAustralia" target="_blank"
+					rel="noopener noreferrer">NodeGirlsAustralia</a>
 			</li>
 		</ul>
 		<ul>
@@ -50,11 +56,16 @@
 			</li>
 			<li class="email">
 				e-mail:
-				<a href="mailto:info@nodegirls.com.au" target="_blank" rel="noopener noreferrer">info@nodegirls.com.au</a>
+				<a href="mailto:info@nodegirls.com.au" target="_blank"
+					rel="noopener noreferrer">info@nodegirls.com.au</a>
 			</li>
 		</ul>
 	</footer>
 
-<script src="js/main.js"></script>
+	<script src="js/main.js"></script>
+	<script>
+		console.log(window.location.href);
+	</script>
 </body>
+
 </html>
